# Opsys-labs

Course_work/: CMakeLists.txt
Course_work/doc/: report.odt
Course_work/src/: client.cpp  server.cpp
lab1/: lab_1.odt
lab2/doc/: report.odt
lab2/src/: CMakeLists.txt  checkers.cpp  checkers.h  child.cpp  functions.h  main.cpp  parent.cpp  parent.h
lab2/test/: CMakeLists.txt  l2_test.cpp
lab3/: CMakeLists.txt
lab3/doc/: report.odt
lab3/src/: lab3.cpp  lab3.h  main.cpp  test.cpp
lab4/doc/: report.odt
lab4/src/: CMakeLists.txt  child.cpp  functions.cpp  functions.h  parent.cpp  utils.cpp  utils.h
lab4/test/: CMakeLists.txt  input1.txt  input2.txt  input4.txt  lab4_test.cpp
lab5/doc/: report.odt
lab5/src/prog1/: CMakeLists.txt  lab5_1.cpp  lab5_1.h  main.cpp  math1.cpp  math1.h
lab5/src/prog2/: CMakeLists.txt  lab5_2.cpp  lab5_2.h  main.cpp  math1.cpp  math2.cpp
lab5/test/prog1/: CMakeLists.txt  lab5_1test.cpp
lab5/test/prog2/: CMakeLists.txt  lab5_2test.cpp
lab6/: CMakeLists.txt
lab6/doc/: report.odt
lab6/src/: client.cpp  net_realization.hpp  node_tree.hpp  server.cpp
